# SpecieScan

./: Batch_Rename_MALDI_files.ipynb  R_preprocessing_SpecieScan.R  Speciescan_Python_Code_EV.ipynb
Denisova Batch 1/: DC12747_F17.mzML  DC12748_C20.mzML  DC15001_A3.mzML  DC15002_A5.mzML  DC15002_G5.mzML  DC15005_A11.mzML  DC15009_D19.mzML  DC15011_A23.mzML  DC15012_D2.mzML  DC15013_A4.mzML  DC15016_D10.mzML  DC15017_A12.mzML  DC15019_G16.mzML  DC15019_I21.mzML  DC15020_D18.mzML  DC15022_G22.mzML  DC15023_A24.mzML  DC15025_F3.mzML  DC15026_F5.mzML  DC15028_I9.mzML  DC15029_F11.mzML  DC15030_F13.mzML  DC15032_C19.mzML  DC15038_I8.mzML  DC15046_J1.mzML  DC15048_J5.mzML  DC15058_J4.mzML  DC15061_J10.mzML  DC15068_L1.mzML  DC15071_O7.mzML  DC15073_O11.mzML  DC15076_L17.mzML  DC15079_L23.mzML  DC15084_A5.mzML  DC15087_D8.mzML  DC15090_G11.mzML  DC15092_A13.mzML  DC15096_G17.mzML  DC15098_G19.mzML  DC15100_A21.mzML  (+55 more)
Denisova Batch 2/: DC12747_D17.mzML  DC12756_C18.mzML  DC12768_C22.mzML  DC15001_G3.mzML  DC15005_G11.mzML  DC15007_A15.mzML  DC15008_A17.mzML  DC15010_D21.mzML  DC15013_G4.mzML  DC15014_D6.mzML  DC15017_G12.mzML  DC15019_A16.mzML  DC15021_A20.mzML  DC15023_G24.mzML  DC15024_I1.mzML  DC15027_I7.mzML  DC15034_I23.mzML  DC15035_F2.mzML  DC15036_F4.mzML  DC15044_C22.mzML  DC15045_I24.mzML  DC15050_J9.mzML  DC15063_J14.mzML  DC15065_J18.mzML  DC15066_J20.mzML  DC1506_N7.mzML  DC15073_L13.mzML  DC15080_D1.mzML  DC15084_G5.mzML  DC15093_G14.mzML  DC15094_A15.mzML  DC15095_D16.mzML  DC15104_I2.mzML  DC15108_I6.mzML  DC15109_I7.mzML  DC15114_C12.mzML  DC15116_F14.mzML  DC15120_I18.mzML  DC15123_C21.mzML  DC15124_F22.mzML  (+57 more)
Denisova Batch 3/: DC12745_D19.mzML  DC15001_D3.mzML  DC15002_D5.mzML  DC15006_A13.mzML  DC15007_G15.mzML  DC15008_G17.mzML  DC15011_G23.mzML  DC15012_A2.mzML  DC15012_G2.mzML  DC15013_D4.mzML  DC15014_A6.mzML  DC15019_C21.mzML  DC15021_G20.mzML  DC15022_A22.mzML  DC15025_C3.mzML  DC15026_C5.mzML  DC15031_F15.mzML  DC15032_I19.mzML  DC15034_C23.mzML  DC15035_C2.mzML  DC15036_C4.mzML  DC15039_F10.mzML  DC15040_F12.mzML  DC15044_I22.mzML  DC15045_C24.mzML  DC15054_J17.mzML  DC15062_J12.mzML  DC15068_O1.mzML  DC15071_L7.mzML  DC15080_A1.mzML  DC15084_D5.mzML  DC15087_G8.mzML  DC15092_G13.mzML  DC15093_A14.mzML  DC15094_G15.mzML  DC15096_A17.mzML  DC15097_D18.mzML  DC15098_A19.mzML  DC15099_D20.mzML  DC15102_A23.mzML  (+58 more)
Denisova Batch 4/: DC12745_C19.mzML  DC12745_F19.mzML  DC12756_D18.mzML  DC12767_C21.mzML  DC12767_F21.mzML  DC12768_D22.mzML  DC15000_D1.mzML  DC15014_G6.mzML  DC15015_G8.mzML  DC15016_G10.mzML  DC15018_A14.mzML  DC15018_D14.mzML  DC15019_C16.mzML  DC15029_I11.mzML  DC15035_I2.mzML  DC15036_I4.mzML  DC15037_I6.mzML  DC15052_J13.mzML  DC15055_J21.mzML  DC1506_N1.mzML  DC15072_O9.mzML  DC15073_L11.mzML  DC15074_O13.mzML  DC15075_L15.mzML  DC15077_O19.mzML  DC15078_O21.mzML  DC15080_G1.mzML  DC15083_G4.mzML  DC15086_G7.mzML  DC15087_A8.mzML  DC15090_A11.mzML  DC15090_D11.mzML  DC15091_A12.mzML  DC15091_D12.mzML  DC15100_G21.mzML  DC15101_G22.mzML  DC15107_I5.mzML  DC15108_F6.mzML  DC15109_F7.mzML  DC15110_F8.mzML  (+56 more)
Denisova Batch 5/: DC12748_A24.mzML  DC12756_F18.mzML  DC12767_D21.mzML  DC15003_D7.mzML  DC15004_G9.mzML  DC15006_D13.mzML  DC15010_G21.mzML  DC15015_A8.mzML  DC15019_F21.mzML  DC15020_G18.mzML  DC15024_C1.mzML  DC15027_C7.mzML  DC15028_F9.mzML  DC15030_I13.mzML  DC15031_C15.mzML  DC15034_F23.mzML  DC15037_C6.mzML  DC15038_F8.mzML  DC15039_C10.mzML  DC15040_C12.mzML  DC15045_F24.mzML  DC15055_J19.mzML  DC15060_J8.mzML  DC15064_J16.mzML  DC15069_O3.mzML  DC15070_L5.mzML  DC15076_O17.mzML  DC15079_O23.mzML  DC15081_A2.mzML  DC15082_D3.mzML  DC15083_A4.mzML  DC15085_D6.mzML  DC15086_A7.mzML  DC15088_D9.mzML  DC15089_A10.mzML  DC15093_D14.mzML  DC15095_G16.mzML  DC15097_A18.mzML  DC15098_D19.mzML  DC15099_A20.mzML  (+55 more)
Denisova Batch 6/: DC12748_A23.mzML  DC12748_D20.mzML  DC12768_F22.mzML  DC15000_G1.mzML  DC15003_G7.mzML  DC15004_A9.mzML  DC15004_D9.mzML  DC15007_D15.mzML  DC15008_D17.mzML  DC15009_G19.mzML  DC15010_A21.mzML  DC15015_D8.mzML  DC15016_A10.mzML  DC15018_G14.mzML  DC15021_D20.mzML  DC15022_D22.mzML  DC15025_I3.mzML  DC15026_I5.mzML  DC15029_C11.mzML  DC15037_F6.mzML  DC15038_C8.mzML  DC15044_F22.mzML  DC15053_J15.mzML  DC15057_J2.mzML  DC15059_J6.mzML  DC15060_N4.mzML  DC15077_L19.mzML  DC15078_L21.mzML  DC15081_G2.mzML  DC15082_G3.mzML  DC15083_D4.mzML  DC15085_A6.mzML  DC15086_D7.mzML  DC15088_G9.mzML  DC15091_G12.mzML  DC15094_D15.mzML  DC15095_A16.mzML  DC15096_D17.mzML  DC15101_A22.mzML  DC15111_I9.mzML  (+57 more)
Denisova Batch 7/: DC12747_C17.mzML  DC12748_A22.mzML  DC12748_F20.mzML  DC15000_A1.mzML  DC15003_A7.mzML  DC15005_D11.mzML  DC15009_A19.mzML  DC15011_D23.mzML  DC15017_D12.mzML  DC15020_A18.mzML  DC15023_D24.mzML  DC15024_F1.mzML  DC15027_F7.mzML  DC15028_C9.mzML  DC15030_C13.mzML  DC15031_I15.mzML  DC15032_F19.mzML  DC15039_I10.mzML  DC15040_I12.mzML  DC15047_J3.mzML  DC15049_J7.mzML  DC15051_J11.mzML  DC15067_J22.mzML  DC15069_L3.mzML  DC15070_O5.mzML  DC15072_L9.mzML  DC15075_O15.mzML  DC15081_D2.mzML  DC15082_A3.mzML  DC15085_G6.mzML  DC15088_A9.mzML  DC15089_G10.mzML  DC15092_D13.mzML  DC15097_G18.mzML  DC15099_G20.mzML  DC15103_C1.mzML  DC15104_F2.mzML  DC15105_F3.mzML  DC15108_C6.mzML  DC15109_C7.mzML  (+54 more)
Failed_spectra/: DC12732_A18.mzML  DC12732_D18.mzML  DC12732_G18.mzML  DC12745_C19.mzML  DC12745_D19.mzML  DC12745_F19.mzML  DC12746_C23.mzML  DC12746_F23.mzML  DC12746_I23.mzML  DC12747_C2.mzML  DC12747_F2.mzML  DC12747_I2.mzML  DC15107_C5.mzML  DC15107_F5.mzML  DC15128_M3.mzML  DC15229_A22.mzML  DC15229_G22.mzML  DC15244_C13.mzML  DC15253_C23.mzML  DC15253_F23.mzML  DC15254_F24.mzML  DC15254_I24.mzML  DC15260_M6.mzML  DC15264_J10.mzML  DC15273_J19.mzML  DC15273_M19.mzML  DC15275_J21.mzML  DC15275_M21.mzML  DC15276_J22.mzML  DC15276_L22.mzML  DC15280_E4.mzML  DC15280_H4.mzML
Paper Results csvs/: Australia_contaminants_merged.csv  Australia_speciescan_results.csv  Azerbaijan_SpecieScan_results.csv  (+7 more)
SpecieScan_Python/: README.md  SpecieScan_Python-Update_2024-08-09.ipynb  SpecieScan_Python.ipynb  setup.cfg  setup.py
(+966 files in other folders)
