[metadata]
name = <SpecieScan(Python)>
version = <0.2.0>
license = MIT
description = <SpecieScan Python & R project>
long_description = file: <README_R.md, README_Py.rst>
author = <Emese Végh>
author_email = <mesve3@gmail.com>
classifiers =
    <Programming Language :: Python :: 3>
    <License :: OSI Approved :: MIT License>
    <Operating System :: OS Independent>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    <alabaster>
    <anaconda-client==1.11.1>
    <anaconda-navigator==2.4.1>
    <anaconda-project>
    <anyio>
    <appdirs==1.4.4>
    <applaunchservices>
    <appnope>
    <appscript>
    <argon2-cffi>
    <argon2-cffi-bindings>
    <arrow>
    <astroid>
    <astropy>
    <asttokens>
    <atomicwrites==1.4.0>
    <attrs>
    <Automat>
    <autopep8>
    <Babel>
    <backcall>
    <backports.functools-lru-cache>
    <backports.tempfile>
    <backports.weakref==1.0.post1>
    <bcrypt>
    <beautifulsoup4>
    <binaryornot>
    <black>
    <bleach>
    <bokeh>
    <boltons>
    <Bottleneck>
    <brotlipy==0.7.0>
    <certifi>
    <cffi>
    <chardet>
    <charset-normalizer>
    <click>
    <cloudpickle>
    <clyent==1.2.2>
    <colorama>
    <colorcet>
    <comm>
    <comtypes==1.2.0>
    <conda==23.3.1>
    <conda-build==3.23.3>
    <conda-content-trust>
    <conda-pack>
    <conda-package-handling>
    <conda-repo-cli==1.0.27>
    <conda-token>
    <conda-verify==3.4.2>
    <conda_package_streaming>
    <constantly==15.1.0>
    <contourpy>
    <cookiecutter>
    <cryptography>
    <cssselect==1.1.0>
    <cycler>
    <cytoolz>
    <dask>
    <datashader>
    <datashape==0.5.4>
    <debugpy>
    <decorator>
    <defusedxml>
    <diff-match-patch>
    <dill>
    <distributed>
    <docstring-to-markdown>
    <docutils>
    <entrypoints>
    <et-xmlfile==1.1.0>
    <executing>
    <fastjsonschema>
    <filelock>
    <flake8>
    <Flask>
    <flit_core>
    <fonttools==4.25.0>
    <fsspec>
    <future>
    <gensim>
    <glob2>
    <gmpy2>
    <greenlet>
    <h5py>
    <HeapDict>
    <holoviews>
    <huggingface-hub>
    <hvplot>
    <hyperlink>
    <idna>
    <imagecodecs>
    <imageio>
    <imagesize>
    <imbalanced-learn>
    <importlib-metadata>
    <incremental>
    <inflection==0.5.1>
    <iniconfig>
    <intake>
    <intervaltree>
    <ipykernel>
    <ipython>
    <ipython-genutils>
    <isort>
    <itemadapter>
    <itemloaders>
    <itsdangerous>
    <jedi>
    <jellyfish>
    <Jinja2>
    <jinja2-time>
    <jmespath>
    <joblib>
    <json5>
    <jsonpatch>
    <jsonpointer==2.1>
    <jsonschema>
    <jupyter-server>
    <jupyter_client>
    <jupyter_core>
    <jupyterlab>
    <jupyterlab-pygments>
    <jupyterlab_server>
    <keyring>
    <kiwisolver>
    <lazy-object-proxy>
    <libarchive-c>
    <llvmlite==0.39.1>
    <locket>
    <lxml>
    <lz4>
    <Markdown>
    <MarkupSafe>
    <matplotlib>
    <matplotlib-inline>
    <mccabe>
    <mistune>
    <mlxtend==0.22.0>
    <mock>
    <more-itertools==9.1.0>
    <mpmath==1.2.1>
    <msgpack>
    <multipledispatch>
    <munkres==1.1.4>
    <mypy-extensions==0.4.3>
    <navigator-updater==0.3.0>
    <nbclassic>
    <nbclient>
    <nbconvert>
    <nbformat>
    <nest-asyncio>
    <networkx>
    <nltk>
    <notebook>
    <notebook_shim>
    <numba>
    <numexpr>
    <numpy>
    <numpydoc>
    <openpyxl==3.0.10>
    <packaging>
    <pandas==1.5.3>
    <pandocfilters>
    <panel>
    <param>
    <parsel>
    <parso>
    <partd>
    <pathlib>
    <pathspec>
    <patsy==0.5.3>
    <pep8==1.7.1>
    <pexpect>
    <pickleshare>
    <Pillow==9.4.0>
    <pkginfo>
    <platformdirs>
    <plotly>
    <pluggy>
    <ply==3.11>
    <pooch>
    <poyo>
    <prometheus-client>
    <prompt-toolkit>
    <Protego>
    <psutil>
    <ptyprocess>
    <pure-eval>
    <py>
    <pyasn1>
    <pyasn1-modules==0.2.8>
    <pycodestyle>
    <pycosat>
    <pycparser>
    <pyct>
    <pycurl==7.45.1>
    <PyDispatcher==2.0.5>
    <pydocstyle>
    <pyerfa>
    <pyflakes>
    <Pygments>
    <PyHamcrest>
    <PyJWT>
    <pylint>
    <pylint-venv>
    <pyls-spyder==0.4.0>
    <pymsfilereader==1.0.1>
    <pymzml==2.5.2>
    <pyobjc-core>
    <pyobjc-framework-Cocoa>
    <pyobjc-framework-CoreServices>
    <pyobjc-framework-FSEvents>
    <pyodbc>
    <pyOpenSSL>
    <pyparsing>
    <PyQt5-sip==12.11.0>
    <pyrsistent>
    <PySocks>
    <pyteomics==4.6>
    <pytest==7.1.2>
    <python-dateutil>
    <python-lsp-black>
    <python-lsp-jsonrpc==1.0.0>
    <python-lsp-server>
    <python-slugify>
    <python-snappy>
    <pytoolconfig>
    <pytz>
    <pytz-deprecation-shim==0.1.0>
    <pyviz-comms>
    <PyWavelets>
    <PyYAML>
    <pyzmq>
    <QDarkStyle>
    <qstylizer>
    <QtAwesome>
    <qtconsole>
    <QtPy>
    <Quandl==3.7.0>
    <queuelib==1.5.0>
    <regex>
    <requests>
    <requests-file>
    <rope>
    <rpy2==3.5.12>
    <Rtree>
    <ruamel-yaml-conda>
    <ruamel.yaml>
    <ruamel.yaml.clib>
    <scikit-image>
    <scikit-learn>
    <scipy==1.10.0>
    <Scrapy>
    <seaborn>
    <Send2Trash>
    <service-identity>
    <sip>
    <six>
    <smart-open>
    <sniffio>
    <snowballstemmer>
    <sortedcontainers>
    <soupsieve>
    <Sphinx>
    <sphinxcontrib-applehelp>
    <sphinxcontrib-devhelp>
    <sphinxcontrib-htmlhelp>
    <sphinxcontrib-jsmath>
    <sphinxcontrib-qthelp>
    <sphinxcontrib-serializinghtml>
    <spyder>
    <spyder-kernels>
    <SQLAlchemy>
    <stack-data>
    <statsmodels>
    <sympy>
    <tables>
    <tabulate>
    <TBB==0.2>
    <tblib>
    <tenacity>
    <terminado>
    <text-unidecode>
    <textdistance>
    <threadpoolctl>
    <three-merge>
    <tifffile>
    <tinycss2>
    <tldextract>
    <tokenizers>
    <toml>
    <tomli>
    <tomlkit>
    <toolz>
    <torch==1.12.1>
    <tornado>
    <tqdm>
    <traitlets>
    <transformers>
    <Twisted>
    <typing_extensions>
    <tzdata==2023.3>
    <tzlocal==4.3.1>
    <ujson>
    <Unidecode>
    <urllib3>
    <w3lib>
    <watchdog>
    <wcwidth>
    <webencodings==0.5.1>
    <websocket-client>
    <Werkzeug>
    <whatthepatch>
    <wrapt>
    <wurlitzer>
    <xarray>
    <xlwings>
    <yapf>
    <zict==2.1.0>
    <zipp>
    <zope.interface>
    <zstandard>


[options.packages.find]
where = src